move maketitle and selectlanguage to documentclass

--- a/UTNetLab.cls
+++ b/UTNetLab.cls
@@ -117,6 +117,9 @@
         fontadjust=true,
         upquote=true,
     }
+
+    \selectlanguage{english}
+    \maketitle
 }
 
 \newcommand{\maketitlepage}{%
