--- a/7 Multicast and realtime service/Multicast and realtime service.tex
+++ b/7 Multicast and realtime service/Multicast and realtime service.tex
@@ -47,14 +47,14 @@
                     \hline \hline
                     Host & IP Address & Subnet Mask \\
                     \hline 
-                    h0 (shakti) & 128.238.66.100 & 255.255.255.0 \\
-                    h1 (vayu) & 128.238.66.101 & 255.255.255.0 \\
-                    h2 (agni) & 128.238.66.102 & 255.255.255.0 \\
-                    h3 (apah) & 128.238.66.103 & 255.255.255.0 \\
-                    h4 (yachi) & 128.238.66.104 & 255.255.255.0 \\
-                    h5 (fenchi) & 128.238.66.105 & 255.255.255.0 \\
-                    h6 (kenchi) & 128.238.66.106 & 255.255.255.0 \\
-                    h7 (guchi) & 128.238.66.107 & 255.255.255.0 \\
+                    h0 & 128.238.66.100 & 255.255.255.0 \\
+                    h1 & 128.238.66.101 & 255.255.255.0 \\
+                    h2 & 128.238.66.102 & 255.255.255.0 \\
+                    h3 & 128.238.66.103 & 255.255.255.0 \\
+                    h4 & 128.238.66.104 & 255.255.255.0 \\
+                    h5 & 128.238.66.105 & 255.255.255.0 \\
+                    h6 & 128.238.66.106 & 255.255.255.0 \\
+                    h7 & 128.238.66.107 & 255.255.255.0 \\
                     \hline \hline
                     \end{tabular}
             \end{table}
@@ -150,31 +150,31 @@ route add -net 224.0.0.0 netmask 240.0.0.0 dev eth0
     \begin{lstlisting}
 netspy 224.111.111.111 1500
     \end{lstlisting}
-    Then, start the multicast sender \lstinline{netspyd} on \textit{shakti}, by executing:
+    Then, start the multicast sender \lstinline{netspyd} on \textit{h0}, by executing:
     \begin{lstlisting}
 netspyd 224.111.111.111 1500 1
     \end{lstlisting}
     Execute \lstinline{tcpdump ip multicast} or \lstinline{wireshark} on every host to capture multicast IP datagrams.
 
-    Login to \textit{shakti} from a remote machine, e.g.\  \textit{kenchi}, using \lstinline{telnet} or \lstinline{ssh} (need to start ssh service).
+    Login to \textit{h0} from a remote machine, e.g.\  \textit{h6}, using \lstinline{telnet} or \lstinline{ssh} (need to start ssh service).
 
     Save the captured multicast datagram sent by \lstinline{netspyd} and exit the \lstinline{telnet} (or \lstinline{ssh}) session.
 
     \subsection*{Report}
-    From the \lstinline{tcpdump} output, how many messages are sent by \lstinline{netspyd} when a new user logged in to \textit{shakti}?
+    From the \lstinline{tcpdump} output, how many messages are sent by \lstinline{netspyd} when a new user logged in to \textit{h0}?
     From the \lstinline{netspy} outputs on all the hosts, how many copies of the message are received in total?
 
-    Did \textit{shakti}, where the multicast sender, \lstinline{netspyd}, was running, receive the multicast datagram?
+    Did \textit{h0}, where the multicast sender, \lstinline{netspyd}, was running, receive the multicast datagram?
     Why?
-    If yes, through which interface did \textit{shakti} receive this datagram?
+    If yes, through which interface did \textit{h0} receive this datagram?
 
 \section{ping Replay}
     Enable broadcast ping replay by: \lstinline{echo 0 > /proc/sys/net/ipv4/icmp_echo_ignore_broadcasts} on all hosts.
     Keep the \lstinline{netspy} and the \lstinline{tcpdump} programs running.
-    Execute \lstinline{ping 224.111.111.111} from \textit{kenchi}.
+    Execute \lstinline{ping 224.111.111.111} from \textit{h6}.
     Examine the \lstinline{tcpdump} and \lstinline{ping} outputs to see which hosts replied.
     To avoid confusion, students should do this exercise by turns.
-    Terminate the \lstinline{netspy} programs on several hosts, e.g. \textit{shakti}, \textit{vayu}, and \textit{fenchi}.
+    Terminate the \lstinline{netspy} programs on several hosts, e.g. \textit{h0}, \textit{h1}, and \textit{h5}.
     Execute the \lstinline{ping} command again.
     Also, examine the \lstinline{tcpdump} and the \lstinline{ping} outputs to see which hosts replied.
 
@@ -189,10 +189,10 @@ netspyd 224.111.111.111 1500 1
             \hline \hline
             Host & Name & Ip Address \\
             \hline
-                host1 & shakti & 128.238.63.101/24 \\
-                host2 & vayu   & 128.238.63.102/24 \\
-                host3 & agni   & 128.238.64.103/24 \\
-                host4 & apah   & 128.238.64.104/24 \\
+                host1 & h0 & 128.238.63.101/24 \\
+                host2 & h1   & 128.238.63.102/24 \\
+                host3 & h2   & 128.238.64.103/24 \\
+                host4 & h3   & 128.238.64.104/24 \\
             \hline \hline
             \end{tabular}
     \end{table}
@@ -247,7 +247,7 @@ netspyd 224.111.111.111 1500 1
     \begin{lstlisting}
 netspy 224.111.111.111 1500
     \end{lstlisting}
-    Start \lstinline{netspy} on \textit{host1} (\textit{shakti}, by using:
+    Start \lstinline{netspy} on \textit{host1} (\textit{h0}, by using:
     \begin{lstlisting}
 netspyd 224.111.111.111 1500 16
     \end{lstlisting}
@@ -314,14 +314,14 @@ ip igmp join-group 224.0.0.2
 
     Run \lstinline{tcpdump ip multicast} or \lstinline{wireshark} on all the hosts. 
 
-    Execute \lstinline{netspy 224.111.111.111 1500} on \textit{shakti}, \textit{agni}, \textit{apah}, \textit{fenchi}, and \textit{kenchi}.
-    Execute \lstinline{netspyd 224.111.111.111 1500 16} on \textit{yachi}.
-    To generate multicast traffic, you can login (by \lstinline{telnet} or \lstinline{ssh}) to or logout of \textit{yachi}.
-    Each time when the login user set of \textit{yachi} changes, \lstinline{netspyd} on \textit{yachi} will send a multicast datagram to group 224.111.111.111, to report the change in its login users.
+    Execute \lstinline{netspy 224.111.111.111 1500} on \textit{h0}, \textit{h2}, \textit{h3}, \textit{h5}, and \textit{h6}.
+    Execute \lstinline{netspyd 224.111.111.111 1500 16} on \textit{h4}.
+    To generate multicast traffic, you can login (by \lstinline{telnet} or \lstinline{ssh}) to or logout of \textit{h4}.
+    Each time when the login user set of \textit{h4} changes, \lstinline{netspyd} on \textit{h4} will send a multicast datagram to group 224.111.111.111, to report the change in its login users.
 
     Can you see the \lstinline{netspy} messages on the 128.238.65.0 (or the 128.238.61.0) subnet in the \lstinline{tcpdump} output? 
 
-    Terminate the \lstinline{netspy} program on \textit{kenchi} (or \textit{shakti}).
+    Terminate the \lstinline{netspy} program on \textit{h6} (or \textit{h0}).
     Can you see the \lstinline{netspy} messages on the 128.238.65.0 (or the 128.238.61.0) subnet?
     \footnote{If IGMPv1 is used, a participant does not send a leave message when it leaves the group.
     In this case, the membership record in the router expires in 120 seconds.
@@ -343,7 +343,7 @@ ip igmp join-group 224.0.0.2
 
 \section{Multicast TTL}
     Keep \lstinline{netspy} running on all the hosts.
-    Ping the multicast group address from yachi, using: 
+    Ping the multicast group address from \textit{h4}, using: 
     \begin{lstlisting}[emph={n}]
 ping 224.111.111.111 -t n
     \end{lstlisting}
@@ -375,13 +375,13 @@ ip multicast ttl-threshold 32
 \section{Multicast Real-Time Video}
     Start \lstinline{vlc} on all the hosts, by using \lstinline{vlc &}. 
 
-    On \textit{shakti}, go to the \lstinline{vlc} menu: \textit{Media/Stream\ldots }. Chose video file \path{/home/netlab/group.mp4} and press \textit{stream} button. In \textit{Stream output} add \textit{RTP /MPEG Transport Stream} dialog.
+    On \textit{h0}, go to the \lstinline{vlc} menu: \textit{Media/Stream\ldots }. Chose video file \path{/home/netlab/group.mp4} and press \textit{stream} button. In \textit{Stream output} add \textit{RTP /MPEG Transport Stream} dialog.
     Then click the \textit{next} button.
     In the next window, specify the multicast group address to be {224.123.111.101}, with port number {22224} %and TTL 33.
     Then click the \textit{Finish} button.
-    Now the \lstinline{vlc} on \textit{shakti} is transmitting the video clip using \textit{RTP/RTSP/UDP/IP} to the multicast group {224.123.111.101} on port {22224}. 
+    Now the \lstinline{vlc} on \textit{h0} is transmitting the video clip using \textit{RTP/RTSP/UDP/IP} to the multicast group {224.123.111.101} on port {22224}. 
 
-    On all other hosts, go to the \lstinline{vlc} menu: \textit{Media/Open Network Stream\ldots}. In the following \textit{Open RTP Session} dialog, specify the same group address, port number as that used in \textit{shakti}.%and TTL
+    On all other hosts, go to the \lstinline{vlc} menu: \textit{Media/Open Network Stream\ldots}. In the following \textit{Open RTP Session} dialog, specify the same group address, port number as that used in \textit{h0}.%and TTL
     Now you should see the received video is displayed on the screen. 
 
     Execute \lstinline{tcpdump ip multicast} or \lstinline{wireshark} in one console to capture the multicast datagrams.
