make tables center-aligned

--- a/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
+++ b/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
@@ -40,9 +40,9 @@
         \begin{minipage}{0.48\textwidth}
             \begin{flushleft}
                 \begin{table}[H]
-                    \caption{The IP addresses of the hosts}
+                    \caption{\textit{Table 1.2} The IP addresses of the hosts}
                     \centering
-                    \begin{tabular}{ l l l }
+                    \begin{tabular}{ c c c }
                         \hline \hline
                         Host & IP Address & Subnet Mask \\
                         \hline 
@@ -83,7 +83,7 @@
                         \draw[thick] (h6) -- (s);
                         \draw[thick] (h7) -- (s);
                     \end{tikzpicture}
-                    \caption{A single segment network}        
+                    \caption{\textit{Figure 1.3} A single segment network}        
                 \end{figure}
             \end{flushright}
         \end{minipage}
@@ -183,7 +183,7 @@ more /etc/services
     expressions that can be used.
 
     If there is no traffic on the network, you may generate traffic with some applications
-    (e.g. \lstinline{telnet}, \lstinline{ping}, etc.).
+    (e.g.\ \lstinline{telnet}, \lstinline{ping}, etc.).
     
     \subsection*{Report}
     Explain briefly the purposes of the following \lstinline{tcpdump} expressions.
