--- a/9 Network management and security/Network management and security.tex
+++ b/9 Network management and security/Network management and security.tex
@@ -35,7 +35,7 @@
 
 \begin{document}
 \section*{SNMP exercises}
-    For the exercises in this section, the network topology is given in Fig. 1.3, where all the hosts are connected in a single network segment using their IP addresses, i.e., from 128.238.66.100 to 128.238.66.102.
+    For the exercises in this section, the network topology is given in Fig. 1.3, where all the hosts are connected in a single network segment using their IP addresses, i.e.\  from 128.238.66.100 to 128.238.66.102.
 
     Before the lab, you should:
     \begin{enumerate}
@@ -221,7 +221,7 @@ State or Province Name (full name) [Some-State]:Tehran
 Locality Name (eg, city) []:Tehran 
 Organization Name (eg, company) [Internet Widgits Pty Ltd]:University of Tehran 
 Organizational Unit Name (eg, section) []:ECE Department 
-Common Name (e.g. server FQDN or YOUR name) []:ece.ut.ac.ir 
+Common Name (e.g.\ server FQDN or YOUR name) []:ece.ut.ac.ir 
 Email Address []:netlab@ut.ac.ir 
     \end{verbatim}}
 
@@ -254,7 +254,7 @@ Email Address []:netlab@ut.ac.ir
     Start \lstinline{apache2} service and brwose several page in the \textit{Mozilla}. Open random URL that not exist on the web server to generate log for apache. Browse again page as \path{secure http}.
 
 \section{Trace Log}
-    Go to \path{log} folder at \path{/var/log/} to examine the log files in your host. If a log (e.g. the \textit{Apache Access Log} at \path{/var/log/apache2/access.log}) is too long, use \lstinline[emph={keyword}]{grep keyword access.log} (e.g. \texttt{GET}) in the {console} to display those log entries containing the keyword. Enter the keyword \texttt{failed} to display logged failures.
+    Go to \path{log} folder at \path{/var/log/} to examine the log files in your host. If a log (e.g.\ the \textit{Apache Access Log} at \path{/var/log/apache2/access.log}) is too long, use \lstinline[emph={keyword}]{grep keyword access.log} (e.g.\ \texttt{GET}) in the {console} to display those log entries containing the keyword. Enter the keyword \texttt{failed} to display logged failures.
 
     See other log files.
 
