--- a/2 A single segment network/A single segment network.tex
+++ b/2 A single segment network/A single segment network.tex
@@ -40,9 +40,9 @@
         \begin{minipage}{0.48\textwidth}
             \begin{flushleft}
                 \begin{table}[H]
-                    \caption{The IP addresses of the hosts}
+                    \caption{\textit{Table 1.2} The IP addresses of the hosts}
                     \centering
-                    \begin{tabular}{ l l l }
+                    \begin{tabular}{ c c c }
                         \hline \hline
                         Host & IP Address & Subnet Mask \\
                         \hline 
@@ -83,7 +83,7 @@
                         \draw[thick] (h6) -- (s);
                         \draw[thick] (h7) -- (s);
                     \end{tikzpicture}
-                    \caption{A single segment network}        
+                    \caption{\textit{Figure 1.3} A single segment network}        
                 \end{figure}
             \end{flushright}
         \end{minipage}
@@ -187,7 +187,7 @@ arp -d remote-host
     The network topology for this proxy ARP exercise is shown in Fig. 2.9. We will divide the group into two subnets interconnected by a router. The IP addresses and network masks for the hosts are also given in Fig. 2.9. Change the IP address and network mask of your host accordingly (see Section 2.3.2). The IP addresses and network masks of the \textit{Router4} interfaces are the same as their default settings.
     Note that the network mask of the hosts in the 128.238.65.0 network is 255.255.0.0.
 
-    Set ip of each network by running the following command in the hosts:
+    Set IP of each network by running the following command in the hosts:
     \begin{enumerate}
         \item \lstinline[emph={x.x.x.x}]{ifconfig eth0 x.x.x.x/mask}
         \item \lstinline[emph={x.x.x.x}]{route add default gw x.x.x.x}
@@ -290,7 +290,7 @@ socket -i -u -n1 -w1000 host-in-64-0-subnet echo
     \begin{table}[H]
         \caption{\textit{Table 2.3.} Host IP addresses and network masks for \textit{11 Duplicate IP}}
         \centering
-        \begin{tabular}{ l l l l }
+        \begin{tabular}{ c c c c }
             \hline \hline
             Group & Host & IP Address & Subnet Mask \\
             \hline 
@@ -316,7 +316,7 @@ socket -i -u -n1 -w1000 host-in-64-0-subnet echo
     Then, do the following three experiments.
 
     \begin{enumerate}
-        \item Execute \lstinline{telnet} from one of two hosts with the duplicate IP address to a host with unique IP address (e.g. \textit{h0} –> \textit{h2} in Group A and \textit{h4} –> \textit{h6} in Group B).
+        \item Execute \lstinline{telnet} from one of two hosts with the duplicate IP address to a host with unique IP address (e.g.\ \textit{h0} –> \textit{h2} in Group A and \textit{h4} –> \textit{h6} in Group B).
 
         Now, from the other host with the duplicate IP address, execute \lstinline{telnet} command to the same host (\textit{h1} –> \textit{h2} or \textit{h5} –> \textit{h6}).
 
@@ -357,18 +357,18 @@ socket -i -u -n1 -w1000 host-in-64-0-subnet echo
     \begin{table}[H]
         \caption{\textit{Table 2.4.} Host IP addresses and network masks for \textit{12 IP subnet}}
         \centering
-        \begin{tabular}{ l l l l }
+        \begin{tabular}{ c c c c }
             \hline \hline
             Group & Host & IP Address & Subnet Mask \\
             \hline 
             Group A & h0 & 128.238.66.100 & 255.255.255.240 \\
-                    & h1 & 128.238.66.101 & 255.255.255.0 \\
-                    & h2 & 128.238.66.102 & 255.255.255.0 \\
+                    & h1 & 128.238.66.101 & 255.255.255.0~~~ \\
+                    & h2 & 128.238.66.102 & 255.255.255.0~~~ \\
                     & h3 & 128.238.66.120 & 255.255.255.240 \\
                     \hline
             Group B & h4 & 128.238.66.104 & 255.255.255.240 \\
-                    & h5 & 128.238.66.105 & 255.255.255.0 \\
-                    & h6 & 128.238.66.106 & 255.255.255.0 \\
+                    & h5 & 128.238.66.105 & 255.255.255.0~~~ \\
+                    & h6 & 128.238.66.106 & 255.255.255.0~~~ \\
                     & h7 & 128.238.66.121 & 255.255.255.240 \\
             \hline \hline
             \end{tabular}
