--- a/4 Static and dynamic routing/Static and Dynamic routing.tex
+++ b/4 Static and dynamic routing/Static and Dynamic routing.tex
@@ -40,10 +40,10 @@
     \begin{table}[H]
         \caption{\textit{Table 4.2 and 4.3} Router and Host IP addresses for Fig. 4.10}
         \centering
-        \begin{tabular}{ *2l | *2l | *2l }
+        \begin{tabular}{ *2c | *2c | *2c }
             \hline \hline
-            \multicolumn{2}{l|}{Router} & \multicolumn{2}{l|}{Host\textsubscript{A}} & \multicolumn{2}{l}{Host\textsubscript{B}} \\
-            eth0 & eth1 & Name & Ip Address & Name & IP Address \\
+            \multicolumn{2}{c|}{Router} & \multicolumn{2}{c|}{Host\textsubscript{A}} & \multicolumn{2}{c}{Host\textsubscript{B}} \\
+            eth0 & eth1 & Name & IP Address & Name & IP Address \\
             \hline 
             128.238.61.1/24 & 128.238.62.1/24 & h0 & 128.238.61.101/24 & h1 & 128.238.62.101/24 \\
             % 2 & 128.238.62.2/24 & 128.238.63.2/24 & h2 & 128.238.62.102/24 & h3 & 128.238.63.102/24 \\
