--- a/7 Multicast and realtime service/Multicast and realtime service.tex
+++ b/7 Multicast and realtime service/Multicast and realtime service.tex
@@ -36,14 +36,15 @@
 \begin{document}
 \section*{Simple multicast exercises}
     For all the exercises in this section, the network topology is given in Fig.
-    \ref{fig:fig13}\footnote{1.3 in Reference}, where all the hosts are connected to a single network segment using their default IP addresses, i.e.\  from 128.238.66.100 to 128.238.66.107.
+    \ref{fig:fig13}\footnote{1.3 in Reference}, where all the hosts are connected to a single network segment using their default IP addresses, i.e.\ from 128.238.66.100 to 128.238.66.107.
+    
     \begin{minipage}{0.48\textwidth}
         \begin{flushleft}
             \begin{table}[H]
                 \caption{\textit{Table 1.2} The IP addresses of the hosts}
                 \label{tbl:1.2}
                 \centering
-                \begin{tabular}{ l l l }
+                \begin{tabular}{ c c c }
                     \hline \hline
                     Host & IP Address & Subnet Mask \\
                     \hline 
@@ -156,7 +157,7 @@ netspyd 224.111.111.111 1500 1
     \end{lstlisting}
     Execute \lstinline{tcpdump ip multicast} or \lstinline{wireshark} on every host to capture multicast IP datagrams.
 
-    Login to \textit{h0} from a remote machine, e.g.\  \textit{h6}, using \lstinline{telnet} or \lstinline{ssh} (need to start ssh service).
+    Login to \textit{h0} from a remote machine, e.g.\ \textit{h6}, using \lstinline{telnet} or \lstinline{ssh} (need to start ssh service).
 
     Save the captured multicast datagram sent by \lstinline{netspyd} and exit the \lstinline{telnet} (or \lstinline{ssh}) session.
 
@@ -174,7 +175,7 @@ netspyd 224.111.111.111 1500 1
     Execute \lstinline{ping 224.111.111.111} from \textit{h6}.
     Examine the \lstinline{tcpdump} and \lstinline{ping} outputs to see which hosts replied.
     To avoid confusion, students should do this exercise by turns.
-    Terminate the \lstinline{netspy} programs on several hosts, e.g. \textit{h0}, \textit{h1}, and \textit{h5}.
+    Terminate the \lstinline{netspy} programs on several hosts, e.g.\ \textit{h0}, \textit{h1}, and \textit{h5}.
     Execute the \lstinline{ping} command again.
     Also, examine the \lstinline{tcpdump} and the \lstinline{ping} outputs to see which hosts replied.
 
@@ -185,9 +186,9 @@ netspyd 224.111.111.111 1500 1
         \caption{\textit{Table 7.2.} Hosts IP addresses for Fig. 7.13}
         \label{tbl:7.2}
         \centering
-        \begin{tabular}{ *3l }
+        \begin{tabular}{ *3c }
             \hline \hline
-            Host & Name & Ip Address \\
+            Host & Name & IP Address \\
             \hline
                 host1 & h0 & 128.238.63.101/24 \\
                 host2 & h1   & 128.238.63.102/24 \\
@@ -201,7 +202,7 @@ netspyd 224.111.111.111 1500 1
         \caption{\textit{Table 7.3.} Router IP addresses for Fig. 7.13}
         \label{tbl:7.3}
         \centering
-        \begin{tabular}{ *3l }
+        \begin{tabular}{ *3c }
             \hline \hline
             Host & eth0 & eth1 \\
             \hline
@@ -286,7 +287,7 @@ netspyd 224.111.111.111 1500 16
 
 \section{Router Join To Multicast-Group}
     Login to the router.
-    See if you can make a router interface (e.g. \textit{ethernet0}) join a multicast group of 224.0.0.2, using:
+    See if you can make a router interface (e.g.\ \textit{ethernet0}) join a multicast group of 224.0.0.2, using:
     \begin{lstlisting}[language={cisco}]
 ip igmp join-group 224.0.0.2
     \end{lstlisting}
@@ -349,7 +350,7 @@ ping 224.111.111.111 -t n
     \end{lstlisting}
 
     The parameter \textit{n} is the TTL to be set to the multicast datagrams sent by ping.
-    Try different values of \textit{n}, e.g. 1, 2, 3, and 16.
+    Try different values of \textit{n}, e.g.\ 1, 2, 3, and 16.
     See how far a multicast datagram can travel with different TTL values. 
 
     Now, login to \textit{Router2}, in the \textit{Interface Configuration} mode, set the TTL threshold of the \textit{ethernet0} interface to 32, using: 
