--- a/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
+++ b/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
@@ -35,7 +35,7 @@
 
 \begin{document}
 \section*{HTTP exercises}
-    For the exercises in this section, the network topology is simple with two hosts are connected to a single network segment with IP addresses, i.e., from 128.238.66.100 to 128.238.66.101. Add first host from \textit{http-server} and another hsot from \textit{gui}.
+    For the exercises in this section, the network topology is simple with two hosts are connected to a single network segment with IP addresses, i.e.\  from 128.238.66.100 to 128.238.66.101. Add first host from \textit{http-server} and another hsot from \textit{gui}.
 
 \section{HTTP Server}
     Examine the various configuration directives used and the corresponding settings\footnote{\path{/etc/apache2/apache2.conf}}. 
@@ -113,7 +113,7 @@ User-Agent: HTTPTool/1.0
 
     Use \textit{Mozilla} to download the \url{http://remote-host/try2.htm} file, which is an \textit{HTML} form, from the remote host. 
 
-    Fill a text string, e.g. the name of the host being used, into the text field in the form and click the submit button in the form. 
+    Fill a text string, e.g.\ the name of the host being used, into the text field in the form and click the submit button in the form. 
 
     When the server response is received, terminate \lstinline{wireshark}. 
 
@@ -166,7 +166,7 @@ User-Agent: HTTPTool/1.0
     \begin{enumerate}
         \item Change MAC address of \textit{h5} in server configuration file (Table 8.3) by your \textit{h5} MAC address and save to \textit{dhcpd.conf}.
         
-        \item Set ip of \textit{h1} to {128.238.66.100}
+        \item Set IP of \textit{h1} to {128.238.66.100}
         
         \item Start the DHCP server on \textit{h1} in the foreground and working in the debugging mode: \lstinline{dhcpd -d -f}\footnote{default }.
         
@@ -174,7 +174,7 @@ User-Agent: HTTPTool/1.0
         
         \item Then do the following to enable DHCP for the Ethernet interface on \textit{h2}. 
 
-        Run \lstinline{ifconfig eth0 0} on \lstinline{h2} to clear ip of \textit{eth0}
+        Run \lstinline{ifconfig eth0 0} on \lstinline{h2} to clear IP of \textit{eth0}
 
         And run \lstinline{dhclient eth0}.
 
@@ -227,14 +227,14 @@ User-Agent: HTTPTool/1.0
     \end{enumerate}
 
 \section*{NTP exercises}
-    Before proceeding to the next exercise, reboot the hosts and set network topology is given in Fig. 1.3 and set hosts ip address from 128.238.66.100 to 128.238.66.107.
+    Before proceeding to the next exercise, reboot the hosts and set network topology is given in Fig. 1.3 and set hosts IP address from 128.238.66.100 to 128.238.66.107.
     \begin{center}
         \begin{minipage}{0.48\textwidth}
             \begin{flushleft}
                 \begin{table}[H]
-                    \caption{The IP addresses of the hosts}
+                    \caption{\textit{Table 1.2} The IP addresses of the hosts}
                     \centering
-                    \begin{tabular}{ l l l }
+                    \begin{tabular}{ c c c }
                         \hline \hline
                         Host & IP Address & Subnet Mask \\
                         \hline 
@@ -324,7 +324,7 @@ date -r file-name
     \end{enumerate}
 
 \section*{NAT exercises}
-    For the exercises in this section, we use a network setting as shown in Fig. 8.7. The lower subnet is a private network where the hosts are assigned with the Class A addresses with the 10.0.0.0/8 prefix. The upper subnet represents the Internet. The hosts, i.e., \textit{h0} and \textit{h1} are assigned with public IP addresses. Router 1 is used as the stub router, which performs address or port translation for the private network.
+    For the exercises in this section, we use a network setting as shown in Fig. 8.7. The lower subnet is a private network where the hosts are assigned with the Class A addresses with the 10.0.0.0/8 prefix. The upper subnet represents the Internet. The hosts, i.e.\  \textit{h0} and \textit{h1} are assigned with public IP addresses. Router 1 is used as the stub router, which performs address or port translation for the private network.
     \begin{figure}[H]
         \centering
         \includegraphics[width=0.9\textwidth]{img/fig1.png}
@@ -370,11 +370,11 @@ access-list 8 permit 10.0.0.0 0.0.0.255
 \section{NAT Visibility}
     Keep the login session to the router running. Execute \lstinline{tcpdump -exn -nn} or \lstinline{wireshark} on all the hosts. 
 
-    Before any host in the private network send any packets out, \lstinline{ping} an inside host (e.g. \textit{h5}) from an outside host (e.g. \textit{h1}). You may try to \lstinline{ping} \textit{10.0.0.5, 128.238.61.102, 128.238.61.103, or 128.238.61.104}. Can you \lstinline{ping} these IP addresses? 
+    Before any host in the private network send any packets out, \lstinline{ping} an inside host (e.g.\ \textit{h5}) from an outside host (e.g.\ \textit{h1}). You may try to \lstinline{ping} \textit{10.0.0.5, 128.238.61.102, 128.238.61.103, or 128.238.61.104}. Can you \lstinline{ping} these IP addresses? 
 
-    Let an inside host send packets to an outside host, e.g. from \textit{h5}, execute \lstinline{ping} 128.238.61.100. Can you \lstinline{ping} \textit{h5} from an outside host now? Why? Which IP address should be used in the \lstinline{ping} command in order to \lstinline{ping} \textit{h5}? 
+    Let an inside host send packets to an outside host, e.g.\ from \textit{h5}, execute \lstinline{ping} 128.238.61.100. Can you \lstinline{ping} \textit{h5} from an outside host now? Why? Which IP address should be used in the \lstinline{ping} command in order to \lstinline{ping} \textit{h5}? 
 
-    Execute show ip nat translations in the router login window to display the translation table. Save the output for the lab report. 
+    Execute \lstinline[language=cisco]{show ip nat translations} in the router login window to display the translation table. Save the output for the lab report. 
 
     Exchange the data you saved with a student in the other subnet.
     
@@ -414,7 +414,7 @@ access-list 8 permit 10.0.0.0 0.0.0.255
     Generate traffic between the inside and outside hosts.
     Examine the \lstinline{tcpdump} output to see how PAT works.
 
-    Start the Apache web server on \textit{h7}. Also, start the web browser \textit{Mozilla} on an outside host (e.g. \textit{h0}), and enter the URL \url{http://128.238.61.1}. Save the \lstinline{tcpdump} output.
+    Start the Apache web server on \textit{h7}. Also, start the web browser \textit{Mozilla} on an outside host (e.g.\ \textit{h0}), and enter the URL \url{http://128.238.61.1}. Save the \lstinline{tcpdump} output.
 
     Use \lstinline{show ip nat translations} to display and then save the translation table.
     Exchange the data you saved with a student in the other subnet.
@@ -485,7 +485,7 @@ access-list 8 permit 10.0.0.0 0.0.0.255
         \item First you need to set up the control connection to Port 21 of the remote machine, using a TCP socket.
         \item When the control connection is established, you need to exchange FTP commands with the remote FTP server, as given in Table 5.1.
         \item You can first run \lstinline{telnet remote-host 21}, then type \lstinline{help} to list all the FTP commands.
-        Also, you can try the commands out in the \lstinline{telnet} window, e.g. use \lstinline{USER netlab} to send the user ID and \lstinline{PASS netlab} to send the password to the FTP server.
+        Also, you can try the commands out in the \lstinline{telnet} window, e.g.\ use \lstinline{USER netlab} to send the user ID and \lstinline{PASS netlab} to send the password to the FTP server.
         To terminate the \lstinline{telnet} session, type \lstinline{QUIT}.
         \item In your program, these messages should be sent to the FTP server by calling the \lstinline{send()} function of the local TCP socket.
         \item Also your program needs to parse the server responses (some examples are given in Table 5.2) to find out the status of the previous FTP command.
